IDE: Fix crash in the Treeview Items Editor which allowed trying to open an non-existing file.
(cherry picked from commit 391169053bf4c863a6864f1723519dcd444b2923)

--- a/components/ideintf/treeviewpropedit.lfm
+++ b/components/ideintf/treeviewpropedit.lfm
@@ -279,6 +279,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
   object dlgOpen: TOpenDialog
     Title = 'Open'
     FilterIndex = 0
+    Options = [ofFileMustExist, ofEnableSizing, ofViewDetail]
     Left = 72
     Top = 160
   end
