--- a/components/jcf2/Ui/Settings/fRegistrySettings.lfm
+++ b/components/jcf2/Ui/Settings/fRegistrySettings.lfm
@@ -9,12 +9,13 @@ object fmRegistrySettings: TfmRegistrySettings
   ClientWidth = 771
   Color = clBtnFace
   Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   Scaled = False
   OnCreate = FormCreate
   OnResize = FormResize
   object pgPages: TPageControl
     Left = 0
-    Height = 335
+    Height = 347
     Top = 0
     Width = 771
     ActivePage = tsGeneral
@@ -23,12 +24,12 @@ object fmRegistrySettings: TfmRegistrySettings
     TabOrder = 0
     object tsGeneral: TTabSheet
       Caption = '&General'
-      ClientHeight = 305
-      ClientWidth = 761
+      ClientHeight = 319
+      ClientWidth = 763
       object sbFile: TSpeedButton
         AnchorSideLeft.Control = eSettingsFile
         AnchorSideLeft.Side = asrBottom
-        Left = 625
+        Left = 613
         Height = 25
         Top = 13
         Width = 28
@@ -38,24 +39,24 @@ object fmRegistrySettings: TfmRegistrySettings
       end
       object Label1: TLabel
         Left = 11
-        Height = 16
+        Height = 15
         Top = 12
-        Width = 117
+        Width = 105
         Caption = 'Convert settings file'
       end
       object Label2: TLabel
         Left = 11
-        Height = 16
+        Height = 15
         Top = 252
-        Width = 96
+        Width = 83
         Caption = 'MRU max items'
         Visible = False
       end
       object eSettingsFile: TEdit
         AnchorSideLeft.Control = Label1
         AnchorSideLeft.Side = asrBottom
-        Left = 134
-        Height = 33
+        Left = 122
+        Height = 23
         Top = 11
         Width = 485
         BorderSpacing.Around = 6
@@ -65,7 +66,7 @@ object fmRegistrySettings: TfmRegistrySettings
       object btnClearMRU: TButton
         AnchorSideLeft.Control = eMRUMaxItems
         AnchorSideLeft.Side = asrBottom
-        Left = 176
+        Left = 163
         Height = 25
         Top = 250
         Width = 92
@@ -89,8 +90,8 @@ object fmRegistrySettings: TfmRegistrySettings
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 75
-        ClientWidth = 368
+        ClientHeight = 72
+        ClientWidth = 366
         Items.Strings = (
           '&Always'
           '&On parse error'
@@ -113,8 +114,8 @@ object fmRegistrySettings: TfmRegistrySettings
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 77
-        ClientWidth = 368
+        ClientHeight = 74
+        ClientWidth = 366
         Items.Strings = (
           '&Always'
           '&Fail quietly'
@@ -125,9 +126,9 @@ object fmRegistrySettings: TfmRegistrySettings
       end
       object cbCheckMultibyteChars: TCheckBox
         Left = 411
-        Height = 23
+        Height = 19
         Top = 49
-        Width = 176
+        Width = 154
         Caption = 'Check for &multibyte chars'
         TabOrder = 4
         Visible = False
@@ -135,8 +136,8 @@ object fmRegistrySettings: TfmRegistrySettings
       object eMRUMaxItems: TSpinEdit
         AnchorSideLeft.Control = Label2
         AnchorSideLeft.Side = asrBottom
-        Left = 113
-        Height = 33
+        Left = 100
+        Height = 23
         Top = 248
         Width = 57
         BorderSpacing.Around = 6
@@ -146,13 +147,13 @@ object fmRegistrySettings: TfmRegistrySettings
     end
     object tsLogFile: TTabSheet
       Caption = '&Log file'
-      ClientHeight = 305
-      ClientWidth = 761
+      ClientHeight = 319
+      ClientWidth = 763
       ImageIndex = 1
       object sbSpecifedDir: TSpeedButton
         AnchorSideLeft.Control = Label3
         AnchorSideLeft.Side = asrBottom
-        Left = 160
+        Left = 144
         Height = 25
         Top = 197
         Width = 29
@@ -162,23 +163,23 @@ object fmRegistrySettings: TfmRegistrySettings
       end
       object Label3: TLabel
         Left = 7
-        Height = 16
+        Height = 15
         Top = 199
-        Width = 147
+        Width = 131
         Caption = 'Select specified directory'
       end
       object lblBackupFileExt: TLabel
         Left = 306
-        Height = 16
+        Height = 15
         Top = 20
-        Width = 125
+        Width = 111
         Caption = 'Backup file extension'
       end
       object lblOutputFileExt: TLabel
         Left = 306
-        Height = 16
+        Height = 15
         Top = 49
-        Width = 120
+        Width = 110
         Caption = 'Output file extension'
       end
       object rgLogLevel: TRadioGroup
@@ -195,8 +196,8 @@ object fmRegistrySettings: TfmRegistrySettings
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 73
-        ClientWidth = 279
+        ClientHeight = 70
+        ClientWidth = 277
         Items.Strings = (
           'Errors only'
           'File'
@@ -219,8 +220,8 @@ object fmRegistrySettings: TfmRegistrySettings
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 80
-        ClientWidth = 744
+        ClientHeight = 77
+        ClientWidth = 742
         Items.Strings = (
           'Temp'
           'Application'
@@ -231,9 +232,9 @@ object fmRegistrySettings: TfmRegistrySettings
       end
       object btnViewLog: TButton
         Left = 392
-        Height = 32
+        Height = 25
         Top = 255
-        Width = 98
+        Width = 100
         AutoSize = True
         Caption = 'View Log now'
         TabOrder = 6
@@ -241,17 +242,17 @@ object fmRegistrySettings: TfmRegistrySettings
       end
       object cbViewLog: TCheckBox
         Left = 7
-        Height = 23
+        Height = 19
         Top = 231
-        Width = 160
+        Width = 139
         Caption = 'View log after each run'
         TabOrder = 4
       end
       object edtBackupExt: TEdit
         AnchorSideLeft.Control = lblBackupFileExt
         AnchorSideLeft.Side = asrBottom
-        Left = 437
-        Height = 33
+        Left = 423
+        Height = 23
         Top = 15
         Width = 55
         BorderSpacing.Around = 6
@@ -261,8 +262,8 @@ object fmRegistrySettings: TfmRegistrySettings
       object edtOutputExt: TEdit
         AnchorSideLeft.Control = lblOutputFileExt
         AnchorSideLeft.Side = asrBottom
-        Left = 432
-        Height = 33
+        Left = 422
+        Height = 23
         Top = 49
         Width = 55
         BorderSpacing.Around = 6
@@ -271,31 +272,31 @@ object fmRegistrySettings: TfmRegistrySettings
       end
       object cbLogTime: TCheckBox
         Left = 7
-        Height = 23
+        Height = 19
         Top = 256
-        Width = 177
+        Width = 154
         Caption = 'Log time taken to process'
         TabOrder = 5
       end
     end
     object tsExclusions: TTabSheet
       Caption = '&Exclusions'
-      ClientHeight = 305
-      ClientWidth = 761
+      ClientHeight = 319
+      ClientWidth = 763
       ImageIndex = 2
       OnResize = tsExclusionsResize
       object lblFilesCaption: TLabel
         Left = 11
-        Height = 16
+        Height = 15
         Top = 5
-        Width = 284
+        Width = 258
         Caption = 'Individual files to exclude from batch processing:'
       end
       object lblDirsCaption: TLabel
         Left = 11
-        Height = 16
+        Height = 15
         Top = 148
-        Width = 264
+        Width = 238
         Caption = 'Directories to exclude from batch processing:'
       end
       object mFiles: TMemo
@@ -315,32 +316,32 @@ object fmRegistrySettings: TfmRegistrySettings
     end
     object tsIde: TTabSheet
       Caption = 'IDE'
-      ClientHeight = 305
-      ClientWidth = 761
+      ClientHeight = 319
+      ClientWidth = 763
       ImageIndex = 3
       TabVisible = False
       object cbEditorIntegration: TCheckBox
         Left = 11
-        Height = 23
+        Height = 19
         Top = 15
-        Width = 125
+        Width = 110
         Caption = '&Editor Integration'
         TabOrder = 0
       end
       object cbFormatBeforeSave: TCheckBox
         Left = 11
-        Height = 23
+        Height = 19
         Top = 59
-        Width = 141
+        Width = 120
         Caption = 'Format before &Save'
         TabOrder = 1
         OnClick = cbFormatBeforeSaveClick
       end
       object cbFormatAfterLoad: TCheckBox
         Left = 11
-        Height = 23
+        Height = 19
         Top = 37
-        Width = 129
+        Width = 112
         Caption = 'Format after &Load'
         TabOrder = 2
         OnClick = cbFormatAfterLoadClick
@@ -349,8 +350,8 @@ object fmRegistrySettings: TfmRegistrySettings
   end
   object ButtonPanel: TButtonPanel
     Left = 8
-    Height = 38
-    Top = 343
+    Height = 26
+    Top = 355
     Width = 755
     BorderSpacing.Around = 8
     OKButton.Name = 'OKButton'
