--- a/ide/syncolorattribeditor.lfm
+++ b/ide/syncolorattribeditor.lfm
@@ -969,6 +969,32 @@ object SynColorAttrEditor: TSynColorAttrEditor
       OnChange = GeneralCheckBoxOnChange
     end
   end
+  object PnlFeaturePastEOL: TPanel
+    AnchorSideLeft.Control = pnlItalic
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = pnlUnderline
+    Left = 430
+    Height = 19
+    Top = 134
+    Width = 153
+    AutoSize = True
+    BorderSpacing.Left = 12
+    BevelOuter = bvNone
+    ClientHeight = 19
+    ClientWidth = 153
+    TabOrder = 5
+    object FeaturePastEOLCheckBox: TCheckBox
+      AnchorSideLeft.Control = PnlFeaturePastEOL
+      AnchorSideTop.Control = PnlFeaturePastEOL
+      Left = 0
+      Height = 19
+      Top = 0
+      Width = 153
+      Caption = 'FeaturePastEOLCheckBox'
+      TabOrder = 0
+      OnChange = GeneralCheckBoxOnChange
+    end
+  end
   object lblInfo: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = pnlUnderline
