TReeView property editor. Remove internal function ConfirmFileReplace, use ofOverWrtiePrompt for associated TSaveDialog instead. Part of issue #40806.

--- a/components/ideintf/treeviewpropedit.lfm
+++ b/components/ideintf/treeviewpropedit.lfm
@@ -286,6 +286,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
   object dlgSave: TSaveDialog
     Title = 'Save'
     FilterIndex = 0
+    Options = [ofOverwritePrompt, ofNoReadOnlyReturn, ofEnableSizing, ofViewDetail]
     Left = 136
     Top = 160
   end
