IDE: Editor color options, keep custom colors between invocations of color picker (currently only within the same frame)

--- a/ide/syncolorattribeditor.lfm
+++ b/ide/syncolorattribeditor.lfm
@@ -76,6 +76,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
         DefaultColorColor = clWhite
         Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
         OnGetColors = GeneralColorBoxOnGetColors
+        ColorDialog = ColorDialog1
         Constraints.MaxWidth = 200
         Constraints.MinWidth = 80
         ItemHeight = 16
@@ -225,6 +226,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
         DefaultColorColor = clWhite
         Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
         OnGetColors = GeneralColorBoxOnGetColors
+        ColorDialog = ColorDialog1
         Constraints.MaxWidth = 200
         Constraints.MinWidth = 80
         ItemHeight = 16
@@ -365,6 +367,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
         DefaultColorColor = clWhite
         Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
         OnGetColors = GeneralColorBoxOnGetColors
+        ColorDialog = ColorDialog1
         Constraints.MaxWidth = 200
         Constraints.MinWidth = 80
         ItemHeight = 16
@@ -597,6 +600,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
         DefaultColorColor = clWhite
         Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
         OnGetColors = GeneralColorBoxOnGetColors
+        ColorDialog = ColorDialog1
         Constraints.MaxWidth = 200
         Constraints.MinWidth = 80
         ItemHeight = 16
@@ -1064,5 +1068,32 @@ object SynColorAttrEditor: TSynColorAttrEditor
       TabOrder = 1
       OnChange = dropCustomWordKindChange
     end
+  end
+  object ColorDialog1: TColorDialog
+    Color = clBlack
+    CustomColors.Strings = (
+      'ColorA=000000'
+      'ColorB=000080'
+      'ColorC=008000'
+      'ColorD=008080'
+      'ColorE=800000'
+      'ColorF=800080'
+      'ColorG=808000'
+      'ColorH=808080'
+      'ColorI=C0C0C0'
+      'ColorJ=0000FF'
+      'ColorK=00FF00'
+      'ColorL=00FFFF'
+      'ColorM=FF0000'
+      'ColorN=FF00FF'
+      'ColorO=FFFF00'
+      'ColorP=FFFFFF'
+      'ColorQ=C0DCC0'
+      'ColorR=F0CAA6'
+      'ColorS=F0FBFF'
+      'ColorT=A4A0A0'
+    )
+    Left = 661
+    Top = 161
   end
 end
