--- a/ide/syncolorattribeditor.lfm
+++ b/ide/syncolorattribeditor.lfm
@@ -61,6 +61,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
     DefaultColorColor = clWhite
     Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
     OnGetColors = GeneralColorBoxOnGetColors
+    ColorDialog = ColorDialog1
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 3
     Constraints.MaxWidth = 200
@@ -81,6 +82,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
     DefaultColorColor = clWhite
     Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
     OnGetColors = GeneralColorBoxOnGetColors
+    ColorDialog = ColorDialog1
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 3
     Constraints.MaxWidth = 200
@@ -116,6 +118,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
     DefaultColorColor = clWhite
     Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
     OnGetColors = GeneralColorBoxOnGetColors
+    ColorDialog = ColorDialog1
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 3
     Constraints.MaxWidth = 200
@@ -698,6 +701,7 @@ object SynColorAttrEditor: TSynColorAttrEditor
     DefaultColorColor = clWhite
     Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
     OnGetColors = GeneralColorBoxOnGetColors
+    ColorDialog = ColorDialog1
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 3
     Constraints.MaxWidth = 200
@@ -780,5 +784,32 @@ object SynColorAttrEditor: TSynColorAttrEditor
     Caption = 'lblInfo'
     Visible = False
     WordWrap = True
+  end
+  object ColorDialog1: TColorDialog
+    Color = clBlack
+    CustomColors.Strings = (
+      'ColorA=000000'
+      'ColorB=000080'
+      'ColorC=008000'
+      'ColorD=008080'
+      'ColorE=800000'
+      'ColorF=800080'
+      'ColorG=808000'
+      'ColorH=808080'
+      'ColorI=C0C0C0'
+      'ColorJ=0000FF'
+      'ColorK=00FF00'
+      'ColorL=00FFFF'
+      'ColorM=FF0000'
+      'ColorN=FF00FF'
+      'ColorO=FFFF00'
+      'ColorP=FFFFFF'
+      'ColorQ=C0DCC0'
+      'ColorR=F0CAA6'
+      'ColorS=F0FBFF'
+      'ColorT=A4A0A0'
+    )
+    Left = 661
+    Top = 161
   end
 end
